--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "authors": [
         {
             "name": "CLEAR Media",
-            "email": "info@clearmedia.com"
+            "email": "info@clearmedia.sk"
         }
     ],
     "license": "GPL-3.0",
